@@ -1387,6 +1387,7 @@
    <date>2014-03-10</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [mms] Fix blacklist/whitelist matching with IMAP backend (Bug #13031).
 * [mms] Fix procmail reject recipe (Bug #13060; admin@dei.unipd.it).
    </notes>
   </release>
